# claude-org-runtime

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: broker-bootstrap-folder-trust-approval.md  broker-bootstrap-stage1-folder-trust-design.md  cli.md  scrub-policy.md
src/claude_org_runtime/: __about__.py  __init__.py  cli.py
src/claude_org_runtime/attention/: __init__.py  classifier.py  cli.py  config.py  dedup.py  notify.py  platform.py  readers.py
src/claude_org_runtime/broker/: __init__.py  __main__.py  channel_sidecar.py  cli.py  launcher.py  notify.py  placement.py  rpc.py  server.py  sidecar.py  store.py  surface.py  tokens.py
src/claude_org_runtime/dispatcher/: __init__.py  runner.py
src/claude_org_runtime/migrate/: __init__.py  v1_to_v2.py
tests/: test_dispatcher_runner.py  test_migrate.py  test_prompts.py  test_schema.py  test_settings_generator.py  test_smoke.py
tests/attention/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_dedup.py  test_notify.py  test_platform.py  test_readers.py
tests/broker/: conftest.py  test_bootstrap_folder_trust.py  test_channel_sentat_drop.py  test_channel_sidecar.py  test_cli.py  test_control_plane.py  test_delivery.py  test_launcher.py  test_notify.py  test_nudge_misroute.py  test_placement.py  test_schema.py  test_server.py  test_store.py  test_surface.py
tests/scrub/: scrub_fixture.py  test_scrub.py
tests/terminal/: conftest.py  test_base.py  test_tmux.py  test_wezterm.py
tests/transport/: test_descriptor.py
(+25 files in other folders)
